# engram

./: .gitignore  ANALYTICS_GUIDE.md  CHANGELOG.md  Cargo.toml  DOGFOODING_INSIGHTS.md  EMBEDDINGS_GUIDE.md  GEMINI_SETUP.md  HIVE_GUIDE.md  LEARNING_ARCHITECTURE.md  LEARNING_GUIDE.md  LICENSE  MCP_SETUP.md  MEMORY_ARCHITECTURE.md  MEMORY_CAPACITY_EVOLUTION.md  PLAN.md  README.md  RED_PILL_MEMORY_DISORDERS.md  TUI_GUIDE.md  install.sh  mcp-config.json  test-learning-e2e.sh
.claude/: ralph-loop.local.md
.claude-plugin/: plugin.json
.claude/agents/: engram-memory.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  eval.yml  pages.yml  release.yml
docs/: ANALYTICS_GUIDE.md  DAEMON_GUIDE.md  EMBEDDINGS_GUIDE.md  EXPORT_GUIDE.md  GEMINI_SETUP.md  GIST_SHARING.md  GRAPH_GUIDE.md  HIVE_GUIDE.md  LEARNING_ARCHITECTURE.md  LEARNING_GUIDE.md  MCP_SETUP.md  MEMORY_ARCHITECTURE.md  MEMORY_QUALITY.md  PUBLISHING.md  SYNC_GUIDE.md  TUI_ENHANCEMENT.md  TUI_FEATURES.md  TUI_GUIDE.md  TUI_IMPLEMENTATION_SUMMARY.md
docs/archive/: DOGFOODING_LEARNING.md  DOGFOODING_SUMMARY.md  MULTI_AGENT_DEMO.md  README.md  RED_QUEEN_REPORT.md
eval/: compare.py  domain_results_baseline.json  domain_results_ceiling.json  domain_results_insights_debug.json  domain_results_v1.json  domain_results_v10_drained.json  domain_results_v10_full.json  domain_results_v11_cosine.json  domain_results_v11_full.json  domain_results_v15_current_full.json  domain_results_v16_clean_full.json  domain_results_v17_kw_fallback_smoke.json  domain_results_v18_kw3_smoke.json  domain_results_v19_definitive_full.json  domain_results_v2.json  domain_results_v3.json  domain_results_v3_full.json  domain_results_v4.json  domain_results_v6.json  domain_results_v6b.json  domain_results_v7b_recursive.json  domain_results_v8c_hybrid.json  domain_results_v9c_nokeyword.json  engram_eval.py  engram_research.ipynb  gen_qa_dataset.py  improvement_loop.py  locomo_eval.py  loop_iter_1.json  loop_results.json  qa_dataset.json  qa_procedures_new.json  requirements.txt  results.json  results_full.json  results_v2_concise_smoke.json  results_v2_fact_smoke.json  results_v2_fixed_smoke.json  results_v2_full.json  results_v2_grouped_smoke.json  (+4 more)
eval/report/: _quarto.yml  index.qmd  requirements.txt  styles.css
eval/results/: run_20260220_134656.json
examples/registry/: README.md  registry.json
hooks/: claude-memory-hook.sh  engram-hook.sh  inject-context.sh  session-end-hook.sh
plugin/: README.md
plugin/.claude-plugin/: plugin.json  plugin.md
registry/: README.md
registry/claude-memory-core/: README.md
registry/hive-implementation/: README.md
site/: docs.html  index.html  llms.txt  style.css
skills/: claude-memory.md
skills/hive-knowledge/: README.md  SKILL.md  metadata.json
skills/memory-quality/: SKILL.md
src/: cli.rs  config.rs  daemon.rs  error.rs  health.rs  inject.rs  lib.rs  main.rs  state.rs  sync.rs
src/analytics/: insights.rs  metrics.rs  mod.rs  tracker.rs
src/auth/: mod.rs  providers.rs
src/commands/: ask.rs  auth.rs  consolidate.rs  core.rs  diff.rs  embeddings.rs  graph.rs  heal.rs  hive.rs  hooks.rs  learning.rs  (+8 more)
tests/: cli_smoke.rs  learning_simulation.rs  red_queen_adversarial.rs  red_queen_assumptions.rs  red_queen_memory_disorders.rs  red_queen_progressive_disclosure.rs
(+58 files in other folders)
