[package]
name = "claude-memory"
version = "0.1.0"
edition = "2021"
description = "Conversation memory system for Claude Code - archive, extract knowledge, and analyze usage patterns"
authors = ["Algiras"]
license = "MIT"

[[bin]]
name = "claude-memory"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
dirs = "5"
indicatif = "0.17"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
humansize = "2"
dialoguer = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
