[package]
name = "engram"
version = "0.3.0"
edition = "2021"
description = "Self-improving knowledge management for AI agents - learn from conversations, prioritize by importance, sync to gists"
authors = ["Algiras"]
license = "MIT"
repository = "https://github.com/Algiras/engram"
homepage = "https://algiras.github.io/engram/"
keywords = ["engram", "memory", "knowledge", "ai", "llm"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "engram"
path = "src/lib.rs"

[[bin]]
name = "engram"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
dirs = "5"
indicatif = "0.17"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
humansize = "2"
dialoguer = "0.11"
ratatui = "0.29"
crossterm = "0.28"
fuzzy-matcher = "0.3"
shellexpand = "3"
petgraph = "0.6"
similar = "2"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
